--- a/c41bbac5166a8089bf5e605280fb52029c7a42bb/css/styles.css
+++ b/c41bbac5166a8089bf5e605280fb52029c7a42bb/css/styles.css
@@ -10069,7 +10069,7 @@ img::-moz-selection {
 #mainNav {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: #212529;
+  background-color: #fff;
 }
 #mainNav .navbar-toggler {
   padding: 0.75rem;
